# OrderBook-rs

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  AGENTS.md  BINDING_SPECIFICATIONS.md  Cargo.toml  Makefile  README.md  README.tpl  benchmark_results_nodejs_simulation.json  benchmark_results_python.json  build.rs  debug_napi.js  index.d.ts  index.js  napi.toml  node22_analysis_report.md  package-lock.json  package.json  pyproject.toml  test_comprehensive_bindings.js  test_comprehensive_bindings.py  test_fixed_nodejs_binding.js  test_minimal_napi.rs  test_nodejs_basic.js  test_nodejs_binding.js  test_nodejs_simple.js  test_python_simple.py
.container-use/: environment.json
.github/workflows/: benchmark.yml  bindings.yml
benches/: zerocopy_bench.rs
docs/: README.md
docs/guides/: development_workflows.md  nodejs_bindings.md
docs/reports/: benchmark_summary.md
memory/agents/: README.md
memory/sessions/: README.md
openspec/: project.md
openspec/changes/add-initial-orderbook-spec/: proposal.md  tasks.md
openspec/changes/add-initial-orderbook-spec/specs/book-manager/: spec.md
openspec/changes/add-initial-orderbook-spec/specs/orderbook-engine/: spec.md
openspec/changes/add-initial-orderbook-spec/specs/orderbook-modifications/: spec.md
openspec/changes/add-zero-copy-data-interface/: benchmarks.md  design.md  proposal.md  results.md  tasks.md
openspec/changes/add-zero-copy-data-interface/specs/zero-copy-data/: spec.md
openspec/specs/book-manager/: spec.md
openspec/specs/orderbook-engine/: spec.md
openspec/specs/orderbook-modifications/: spec.md
openspec/specs/zero-copy-data/: spec.md
python/: __init__.py  orderbook_rs.pyi
src/: lib.rs
src/bindings/: mod.rs  node.rs  python.rs
src/bindings/tests/: benchmark_tests.js  benchmark_tests.py  mod.rs  node.rs  node_integration_tests.js  node_tests.js  python.rs  python_integration_tests.py  python_tests.py  test_documentation.md
src/zerocopy/: archive.rs  flight.rs  metrics.rs  mod.rs
tests/: zerocopy_archive.rs  zerocopy_flight.rs  zerocopy_metrics.rs
tests/js/: benchmark_nodejs.js  benchmark_nodejs_simulation.js
