[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "orderbook-rs"
version = "0.2.0"
description = "High-performance, lock-free price level implementation for limit order books"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joaquin Bejar", email = "jb@taunais.com"},
]
maintainers = [
    {name = "Joaquin Bejar", email = "jb@taunais.com"},
]
keywords = ["finance", "orderbook", "trading", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/joaquinbejar/OrderBook-rs"
Repository = "https://github.com/joaquinbejar/OrderBook-rs"
Documentation = "https://github.com/joaquinbejar/OrderBook-rs"
"Bug Tracker" = "https://github.com/joaquinbejar/OrderBook-rs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=22.0",
    "mypy>=1.0",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "orderbook_rs"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

